# mongo_alerts_2teams

./: .gitignore  Cargo.toml  Dockerfile  README.md  config_example.yml  example.config
src/: .main.rs.swp  config.rs  main.rs  post.rs  transform.rs
src/config/: .mod.rs.swp  mod.rs
src/message/: mod.rs
src/post/: mod.rs
src/server/: mod.rs
src/transform/: mod.rs
