[package]
name = "mongo_alerts_2teams"
version = "0.1.0"
authors = ["Daniel Findell <circa.1991@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
futures-util = "0.3"
serde_json = "1.0"
hyper-tls = "0.4"
serde = { version = "1.0", features = ["derive"] }
clap = "3.0.0-beta.1"
env_logger = "0.7"
log = "0.4"
chrono = "0.4"
