[package]
name = "mongo_alerts_2teams"
version = "0.5.1"
authors = ["Daniel F<dan@findelabs.com>"]
edition = "2018"

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
futures-util = "0.3"
serde_json = "1.0"
hyper-tls = "0.4"
serde = { version = "1.0", features = ["derive"] }
#clap = "3.0.0-beta.1"
clap = "2"
env_logger = "0.8"
log = "0.4"
chrono = "0.4"
serde_yaml = "0.8"
url = "2.0"
http = "0.2"
bytes = "0.5"
